Version 0.8.0
2011-06-09 Stefan Busemann: added ts option filelist.groupedFileListGroupByTreeID – can be set to a tree ID so that the search result is grouped by the selected categories of this category selection
2011-03-18 Ralf Merz: fix in tx_damfrontend_DAL_categories: checkCategoryAccess() now checks fe_user groups recursively
Ralf Merz: added Feature #13085: Using language markers in renderVersioningForm()
Ralf Merz: added Feature #13788: Do not show categories in lowest tree-level if there are no files in it
Feature #13677: Ralf Merz: new TypoScript option added to hide categories with no access
fixed Bug #10732: Missing Marker ###FILE_SIZE_HEADER###
fixed Bug #12533: Marker ###FORM_URL### doesn't work correct (thanks to  Pascal Hinz)
Major Feature #6963: Explorer View
Major Feature #8214: shopping cart
Feature #2808: add Mail functionality to pushfile
Feature #7770: Option for checkCategoriesByRootline
Feature #7973: Sorting for grouped filelist (categories)
Feature #8140: groupedFileListUseBackEndSorting
Feature #8141: customRendering for dam columns
Feature #8213: Support for multiple searchwords
Feature #8327: Hooks for filelist and singleView
Feature #8363: Allow Downloads with a Hash
Feature #8370: add custom ts objects
Feature #9306: Performance option
Feature #9859: localization of dam entries
Feature #10179: Language Overlay for pi2
Feature #10543: Improve rendering of mimetypes
Feature #10548: Integrate Easy Search in Searchform
Feature #10550: Signatures for mail function
_searchCategoryAttributes
Feature: show Subcategories in Filelist
fixed Bug #6406: Redundant files when working with workspaces
fixed Bug #7232: Check directory permissions and success during upload
fixed Bug #7415: useTreeAndSelection does not work
fixed Bug #8588: Hidden Categories are shown in the cat trees
fixed Bug #8808: Drilldown Interface missbehaviour with subcategory
fixed Bug #9009: Drilldown Interface should only show Categories which are allowed