@@ -15,7 +15,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'description' => 'Download, upload and edit DAM files via frontend. Shows the dam category tree in frontend, so users can select files by combining dam categories. Files are delivered by a pushfile, so that the fileadmin directory can be secured by a .htaccess file.',
 	'category' => 'plugin',
 	'shy' => 0,
-	'version' => '0.7.3',
+	'version' => '0.7.4',
 	'dependencies' => 'static_info_tables,dam,dam_catedit,dam_index,fileupload',
 	'conflicts' => '',
 	'priority' => '',
